--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 			</div>
 				<div class="col-md-10 col-md-offset-1 text-center fh5co-heading animate-box">
 <p>FALTAN</p>				
-<iframe width="100%" height="280px" src="https://es.watchisup.com/cuenta-atras/embed/2024-10-26-16-00-1?backgroundcolor=&color=%2351b84f" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="350px" src="https://es.watchisup.com/cuenta-atras/embed/2024-10-26-16-00-1?backgroundcolor=&color=%2351b84f" frameborder="0" allowfullscreen></iframe>
 													<img src="images/Separador.png" width="80%" alt="">				
 </div>
 			
@@ -241,7 +241,7 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Confirma tu asistencia</h2>
 					<p>Por favor, manda un mensaje de WhatsApp para confirmar tu asistencia. ¡Gracias!</p>
-<a href="https://api.whatsapp.com/send?phone=+527771971504&amp;text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" target="_blank"><img src="images/boton-whatsapp.png" height="70px" alt="" /></a>
+<a href="https://wa.me/527771971504&amp;text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" target="_blank"><img src="images/boton-whatsapp.png" height="70px" alt="" /></a>
 				</div>
 			</div>
 			<div class="row animate-box">
