--- a/index.html
+++ b/index.html
@@ -241,13 +241,9 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Confirma tu asistencia</h2>
 					<p>Por favor, manda un mensaje de WhatsApp para confirmar tu asistencia. ¡Gracias!</p>
-<a href="https://wa.me/527771971504&amp;text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" target="_blank">Enviar WhatsApp al 7771971504</a>
 				</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-4 col-md-offset-1">
-
-				</div>
+				<div class="col-mod-8 text-center">
+				<a href="https://wa.me/527771971504&amp;text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" target="_blank"><img src="images/boton-whatsapp.png" height="70px" alt="" /></a></div>
 			</div>
 		</div>
 	</div>
