--- a/index.html
+++ b/index.html
@@ -234,16 +234,20 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 	</div>
 	
 	
-<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
+<div id="fh5co-testimonial">
 		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Confirma tu asistencia</h2>
-					<p>Por favor, manda un mensaje de WhatsApp para confirmar tu asistencia. ¡Gracias!</p>
+			<div class="row">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+	            <img src="images/Separador.png" width="80%" alt="">										
+						<p>POR FAVOR MANDA WHATSAPP PARA CONFIRMAR TU ASISTENCIA<br>¡GRACIAS!</p>
+<a href="https://api.whatsapp.com/send?phone=+527771971504&text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" ><img src="images/boton-whatsapp.png" height="70px" alt=""></a>
+		<br>
+					<img src="images/separador1.png" width="200px" alt="">
+						            <img src="images/Separador.png" width="80%" alt="">										
+					</div>
 				</div>
-				<div class="col-mod-8 text-center">
-				<a href="https://wa.me/527771971504&amp;text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" target="_blank"><img src="images/boton-whatsapp.png" height="70px" alt="" /></a></div>
+				
 			</div>
 		</div>
 	</div>
