--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 	            <img src="images/Separador.png" width="80%" alt="">										
 						<p>POR FAVOR MANDA WHATSAPP PARA CONFIRMAR TU ASISTENCIA<br>¡GRACIAS!</p>
-<a href="https://wa.me/527771971504&text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" ><img src="images/boton-whatsapp.png" height="70px" alt=""></a>
+<a href="https://api.whatsapp.com/send?phone=+527771971504&text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" ><img src="images/boton-whatsapp.png" height="70px" alt=""></a>
 		<br>
 					<img src="images/separador1.png" width="200px" alt="">
 						            <img src="images/Separador.png" width="80%" alt="">										
