--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 	            <img src="images/Separador.png" width="80%" alt="">										
-						<p>POR FAVOR MANDA WHATSAPP PARA CONFIRMAR TU ASISTENCIA<br>¡GRACIAS!</p>
+						<p>POR FAVOR MANDA UN MENSAJE DE WHATSAPP PARA CONFIRMAR TU ASISTENCIA.<br>¡GRACIAS!</p>
 <a href="https://api.whatsapp.com/send?phone=+527771971504&text=Hola%20quiero%20confirmar%20asistencia%20a%20los%20XV%20de%20Lesli.%20" ><img src="images/boton-whatsapp.png" height="70px" alt=""></a>
 		<br>
 					<img src="images/separador1.png" width="200px" alt="">
@@ -267,13 +267,6 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-						<a href="#gallery" class="color-2">							
-							<div class="case-studies-summary">
-								<h2>Pruebas de vestido</h2>
-							</div>
-						</a>
-					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 						<a href="#gallery" class="color-2">
 							<div class="case-studies-summary">
@@ -290,21 +283,13 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-						<a href="#gallery" class="color-4">
-							<div class="case-studies-summary">
-								<h2>Momentos</h2>
-							</div>
-						</a>
-					</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-							<a href="#gallery" class="color-3">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
+							<a href="#gallery" class="color-5">
 								<div class="case-studies-summary">
-									<h2>Grandes amigas</h2>
+									<h2>Bellos recuerdos</h2>
 								</div>
 							</a>
-						</li>
+						</li>						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
 							<a href="#gallery" class="color-4">
 								<div class="case-studies-summary">
@@ -313,18 +298,10 @@ Calle Paraíso Oriental #25, Col. Bugambilias, Jiutepec.<br>
 							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-							<a href="#gallery" class="color-4">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
+							<a href="#gallery" class="color-3">
 								<div class="case-studies-summary">
-									<h2>Sesión de fotos</h2>
-								</div>
-							</a>
-						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
-							<a href="#gallery" class="color-5">
-								<div class="case-studies-summary">
-									<h2>Bellos recuerdos</h2>
+									<h2>Grandes amigas</h2>
 								</div>
 							</a>
 						</li>
